--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,18 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 30/03/2022
-Versão: 0.49
+Data de atualização: 31/03/2022
+Versão: 0.50
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+31/03/2022 - Robson Vaamonde - Adicionando as softwares: syslinux syslinux-utils syslinux-efi pxelinux no arquivo:
+00-parametros.sh nas configurações do TFTP-HPA, acrescentado os caminhos do PXELinux e do Syslinux para a copia dos
+arquivos de inicialização do Boot PXE do TFTP-HPA, criado o arquivo: default com as informações do PXE Grub Menu,
+alterado o script: 06-tftphpa.sh adicionado as opções de copiar dos arquivos do PXELinux e Syslinux para o diretório
+do TFTP, correção do caminho do backup do arquivo de Zonas Padrão do Bind9: named.conf.default-zones no script:
+03-dns.sh, caminho estava configurado como: /etc/default/ correto é: /etc/bind/. 
+
 30/03/2022 - Robson Vaamonde - Analisando o BUG: 0015 (Falha de Relógio do Kernel não Sincronizado NTP Server), foi
 adicionado no arquivo de configuração: ntp.conf a opção: +sysall na linha de Log no NTP Server para facilitar o Debug
 da falha, foi adicionado o comando: ntptime no script: 05-ntp.sh para facilitar as informações e sincronismo da data 
