--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,18 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 31/03/2022
-Versão: 0.50
+Data de atualização: 03/04/2022
+Versão: 0.51
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+03/04/2022 - Robson Vaamonde - Analisando o BUG: 0016 (tftp client does not accept options) referente as opções de
+Boot do DHCP Server do Protocolo PXE, falha está associada no tipo de Bios UEFI do Desktop remoto, não sendo um erro
+ou falha de configuração, testando as opções no arquivo de configuração tftp-hpa: -r blksize, estudo para a criação
+do arquivo de instalação do Serviço phpIPAM (*IP Address management*), alterado o arquivo: 00-parametros.sh com as 
+opções do TFTP: initramfs-tools, e mudança das variáveis do Webdav que está com o "T" a mais, alteração do script
+12-webdav.sh referente aos PATH errado. 
+
 31/03/2022 - Robson Vaamonde - Adicionando os softwares: syslinux syslinux-utils syslinux-efi pxelinux no arquivo:
 00-parametros.sh nas configurações do TFTP-HPA, acrescentado os caminhos do PXELinux e do Syslinux para a copia dos
 arquivos de inicialização do Boot PXE do TFTP-HPA, criado o arquivo: default com as informações do PXE Grub Menu,
