--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,18 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 19/04/2022
-Versão: 0.57
+Data de atualização: 28/04/2022
+Versão: 0.58
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+28/04/2022 - Robson Vaamonde - Melhoria na documentação da Instalação da CA nos Navegadores utilizando o GNU/Linux 
+Mint no script: 11-A-openssl-ca.sh, melhoria na documentação do script: 09-vsftpd.sh, adicionado a alteração da
+permissão do arquivo de log: vsftpd.log junto com a criação do arquivo, melhoria na documentação do arquivo de 
+configuração do Tomcat9: server.xml, acréscimo das opções de FTP Passivo e suporte ao NAT no arquivo do VSFTPd
+vsftpd.conf, analise dos BUG's: 0018 - Falha de TCP Wrappers do MySQL Server e 0019 - Falha de criação de arquivos 
+utilizando o Windows Explorer no Windows 10 se conectando remotamente no Servidor FTP utilizando o VSFTPd.
+
 19/04/2022 - Robson Vaamonde - Melhoria no arquivo de configuração: vsftpd.conf, adicionado a linha: listen_port=21
 e o bloco de configuração do modo passivo de acesso remoto via NAT do Servidor FTP (ainda em testes e análise de BUG),
 alteração do arquivo de configuração: 50-default.conf para habilitar o registro dos Log's do VSFTPd no arquivo de Log
