--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,7 +14,8 @@ Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
 13/05/2022 - Robson Vaamonde - Criação do arquivo: mysql.conf da criação dos certificados assinado do MySQL Server,
 customização do script: 11-E-openssl-mysql.sh para resolver os problemas de criação e geração dos certificados SSL
-do MySQL Server.
+do MySQL Server, criação do arquivo: mysql.cnf do cliente do MySQL Server com suporte ao TLS/SSL, acréscimo das
+linhas de TLS/SSL no arquivo de configuração: mysqld.conf.
 
 12/05/2022 - Robson Vaamonde - Atualização do script: 11-D-openssl-tomcat.sh, acréscimo das opções de exportação do
 certificado CRT para PKCS#12 PEM, importação do certificado e exportação do arquivo JKS do Tomcat9 para suportar o
