--- a/NEWS
+++ b/NEWS
@@ -54,7 +54,7 @@ arquivos de configuração (criado: feito e publicado | dev: em desenvolvimento)
 	_ 00-redmine.sh (dev):  gerenciador de projetos baseados na web e ferramenta de gerenciamento de bugs;
 	_ 00-motioneye.sh (dev): software de CFTV de software livre desenvolvido para Linux;
 	_ 00-shinobi.sh (dev): software de CCTV de código aberto escrito em Node.JS;
-	_ 00-netdisco.sh (dev): ferramenta de gerenciamento de rede adequada para redes pequenas a muito grandes;
+	_ 00-netdisco.sh (criado): ferramenta de gerenciamento de rede adequada para redes pequenas a muito grandes;
 	_ 00-thinstation.sh (dev): implementação Linux gratuita e de código aberto de um sistema operacional thin client;
 	_ 00-bastillion.sh (dev): console SSH baseado na web que gerencia o acesso administrativo aos sistemas;
 	_ 00-jenkins.sh (dev): servidor de automação de código aberto;
